# postgres_hybrid_search

./: .coverage  .dockerignore  .env  .env.sample  .gitgnore  .gitignore  Dockerfile  Dockerfile.mcp  README.md  alembic.ini  db_connection.py  db_models.py  docker-compose.traefik.yml  docker-compose.yml  main.py  models.py  output.txt  pyproject.toml  requirements.txt  sample_mcp.py  schemas.py  scrape_news.py  stock_news_mcp.py  test.json  test.py
.backup/: hybrid_search_results.csv  keyword_search_results.csv  semantic_search_results.csv
.github/workflows/: run_test.yml
__docs/: db_design.dbml  getting_started.md  pytest.md
data/news/: news_2022-01-01 23:59:59.csv  news_2022-01-01 23_59_59.csv  news_2022-01-02 23:59:59.csv  news_2022-01-03 23:59:59.csv  news_2022-01-04 23:59:59.csv  news_2022-01-05 23:59:59.csv  news_2022-01-05 23_59_59.csv  news_2024-01-01 23:59:59.csv  news_2024-01-02 23:59:59.csv  news_2024-01-03 23:59:59.csv  news_2024-01-04 23:59:59.csv  news_2024-01-05 23:59:59.csv  news_2024-01-06 23:59:59.csv  news_2024-01-07 23:59:59.csv  news_2024-01-08 23:59:59.csv  news_2024-01-09 23:59:59.csv  (+279 more)
migrations/: env.py  script.py.mako
ml_models/: train_extract_tickers.py
project/: __init__.py  db_connection.py  db_models.py  schemas.py
scripts/: setup.sh
tasks/: insert_embedding_into_news_db.py  insert_news_db.py  insert_news_to_tickers_db.py  insert_tickers_db.py  recognize_financial_entities.py  recognize_stock_tickers.py  scrape_news.py  trigram_search_tickers.py
utils/: csv_handler.py  date_handler.py  nlp_handler.py
(+328 files in other folders)
